objects/zkusps__USPSShipmatePrintServiceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores global printer</description>
    <fields>
        <fullName>zkusps__DocPrinterId__c</fullName>
        <label>DocPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__NonThermalPrinterId__c</fullName>
        <label>NonThermalPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScalesComputerId__c</fullName>
        <label>Scales Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScalesDeviceId__c</fullName>
        <label>Scales Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ScalesName__c</fullName>
        <label>Scales Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ThermalPrinterId__c</fullName>
        <label>ThermalPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>USPS Shipmate Print Service Settings</label>
</CustomObject>